docker/ci/k8s/psql-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: psql
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - image: jutonz/homepage-ci-psql:1
        name: psql
        imagePullPolicy: Always
      restartPolicy: Always
