docker/ci/k8s/web-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: jutonz/homepage-ci-web:1
        name: web
        command: ["/usr/local/bin/concourse"]
        args: ["web"]
        volumeMounts:
        - name: secret-keys
          mountPath: "/concourse-keys/web"
          readOnly: true
        imagePullPolicy: Always
      restartPolicy: Always
      volumes:
      - name: secret-keys
        secret:
          secretName: ci-web-tls-keys
          items:
          - key: authorized_worker_keys
            path: authorized_worker_keys
          - key: session_signing_key
            path: session_signing_key
          - key: session_signing_key.pub
            path: session_signing_key.pub
          - key: tsa_host_key
            path: tsa_host_key
          - key: tsa_host_key.pub
            path: tsa_host_key.pub
