docker/ci/k8s/worker-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: jutonz/homepage-ci-worker:1
        name: worker
        command: ["/usr/local/bin/concourse"]
        args:
        - worker
        - --work-dir=/opt/concourse/worker
        - --tsa-host=web
        - --tsa-public-key=/concourse-keys/worker/tsa_host_key.pub
        - --tsa-worker-private-key=/concourse-keys/worker/worker_key
        volumeMounts:
        - name: secret-keys
          mountPath: "/concourse-keys/worker"
          readOnly: true
        imagePullPolicy: Always
      restartPolicy: Always
      volumes:
      - name: secret-keys
        secret:
          secretName: ci-worker-tls-keys
          items:
          - key: tsa_host_key.pub
            path: tsa_host_key.pub
          - key: worker_key
            path: worker_key
          - key: worker_key.pub
            path: worker_key.pub
