docker/ci/k8s/psql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: psql
  namespace: ci
spec:
  selector:
    app: psql
  ports:
  - name: psql
    port: 5432
    targetPort: 5432
