docker/ci/k8s/worker-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: ci
spec:
  selector:
    app: worker
