docker/ci/k8s/web-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ci
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ci.jutonz.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080
